RESOLVED FIXED274884
Fix CARenderServer sandbox violation
https://bugs.webkit.org/show_bug.cgi?id=274884
Summary Fix CARenderServer sandbox violation
Per Arne Vollan
Reported 2024-05-29 21:54:23 PDT
Fix CARenderServer sandbox violation under WebPage::platformInitialize on macOS.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-05-29 21:54:34 PDT
Per Arne Vollan
Comment 2 2024-05-29 21:56:28 PDT
EWS
Comment 3 2024-05-30 07:23:31 PDT
Committed 279511@main (e42a325eda4c): <https://commits.webkit.org/279511@main> Reviewed commits have been landed. Closing PR #29284 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.