Fix CARenderServer sandbox violation https://bugs.webkit.org/show_bug.cgi?id=274884 rdar://128983768

Reviewed by Chris Dumez.

Fix CARenderServer sandbox violation under WebPage::platformInitialize on macOS.
Do not try to eagerly open up a Mach connection to CARenderServer when unified
PDF is enabled, since this access is not required and blocked in the sandbox in
that case.

* Source/WebKit/WebProcess/WebPage/Cocoa/WebPageCocoa.mm:
(WebKit::WebPage::platformInitialize):

Canonical link: https://commits.webkit.org/279511@main