Source/WebKit/WebProcess/WebPage/Cocoa/WebPageCocoa.mm
@@ -125,13 +125,20 @@ void WebPage::platformInitialize(const WebPageCreationParameters& parameters)
 #if USE(LIBWEBRTC)
     LibWebRTCCodecs::setCallbacks(m_page->settings().webRTCPlatformCodecsInGPUProcessEnabled(), m_page->settings().webRTCRemoteVideoFrameEnabled());
     LibWebRTCCodecs::setWebRTCMediaPipelineAdditionalLoggingEnabled(m_page->settings().webRTCMediaPipelineAdditionalLoggingEnabled());
-#endif    
+#endif
+
 #if PLATFORM(MAC)
     // In order to be able to block launchd on macOS, we need to eagerly open up a connection to CARenderServer here.
-    // This is because PDF rendering on macOS requires access to CARenderServer, unless we're in Lockdown mode.
-    if (!WebProcess::singleton().isLockdownModeEnabled())
-        CARenderServerGetServerPort(nullptr);
+    // This is because PDF rendering on macOS requires access to CARenderServer, unless unified PDF is enabled.
+    // In Lockdown mode we always block access to CARenderServer.
+    bool pdfRenderingRequiresRenderServerAccess = true;
+#if ENABLE(UNIFIED_PDF)
+    pdfRenderingRequiresRenderServerAccess = !m_page->settings().unifiedPDFEnabled();
 #endif
+    if (pdfRenderingRequiresRenderServerAccess && !WebProcess::singleton().isLockdownModeEnabled())
+        CARenderServerGetServerPort(nullptr);
+#endif // PLATFORM(MAC)
+
 #if PLATFORM(IOS_FAMILY)
     setInsertionPointColor(parameters.insertionPointColor);
     setHardwareKeyboardState(parameters.hardwareKeyboardState);
